# ChatBot-backend

./: README.md  pyproject.toml  upload_script.py
app/: main.py
app/src/: config.py  prompts.py  view.py
app/src/modules/: aws.py  databases.py  services.py
