[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["AsadKhalil <asaadkhalil1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
python-dotenv = "^1.1.0"
psycopg-binary = "^3.2.9"
uvicorn = "^0.34.2"
langchain-openai = "^0.3.18"
numpy = "^2.2.6"
langchain-community = "^0.3.24"
langchain = "^0.3.25"
psycopg = "^3.2.9"
firebase-admin = "^6.8.0"
redis = "^6.1.0"
boto3 = "^1.38.23"
pypdf = "^5.5.0"
pymupdf4llm = "^0.0.24"
python-multipart = "^0.0.20"
pgvector = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
